--- a/azira_scrape.ipynb
+++ b/azira_scrape.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "id": "c09aa0d7",
    "metadata": {},
    "outputs": [],
@@ -11,12 +11,13 @@
     "from playwright.async_api import async_playwright\n",
     "import json\n",
     "from pathlib import Path\n",
-    "import time"
+    "import time\n",
+    "from datetime import date, timedelta"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "id": "5a4211ae",
    "metadata": {},
    "outputs": [],
@@ -27,7 +28,29 @@
     "\n",
     "# start and end dates for data downloads\n",
     "start_date = '2022-01-01'\n",
-    "end_date = '2025-11-30'"
+    "end_date = date.today() - timedelta(days=7)\n",
+    "end_date = end_date.strftime(\"%Y-%m-%d\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "4a178ae1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'2025-12-12'"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "end_date"
    ]
   },
   {
