reorganize notebook for clarity

--- a/azira_scrape.ipynb
+++ b/azira_scrape.ipynb
@@ -1,6 +1,18 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "9846d3f0",
+   "metadata": {},
+   "source": [
+    "# Azira Bulk Dataset Submission\n",
+    "\n",
+    "This notebook includes codes to automatically download a list of well-formed GeoJSON files from Azira at https://pinnacle.azira.com/.\n",
+    "\n",
+    "It uses the Playwright browser testing framework."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 17,
    "id": "c09aa0d7",
@@ -13,6 +25,169 @@
     "from pathlib import Path\n",
     "import time\n",
     "from datetime import date, timedelta"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "680b86a0",
+   "metadata": {},
+   "source": [
+    "## 1. Run First \n",
+    "- needed functions and data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "677ab463",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# login info \n",
+    "user, pw = 'katrina.mullan@mso.umt.edu', 'wvp6rau6rqb_bwy1EYT!'\n",
+    "url = 'https://pinnacle.azira.com/'\n",
+    "\n",
+    "# start and end dates for data downloads\n",
+    "start_date = '2022-01-01'\n",
+    "end_date = date.today() - timedelta(days=7)\n",
+    "end_date = end_date.strftime(\"%Y-%m-%d\")\n",
+    "\n",
+    "async def start_browser():\n",
+    "    playwright = await async_playwright().start()\n",
+    "\n",
+    "    browser = await playwright.chromium.launch(headless=False)\n",
+    "\n",
+    "    context = await browser.new_context(\n",
+    "        geolocation={\"latitude\": 46.8721, \"longitude\": -113.9940},\n",
+    "        permissions=[\"geolocation\"],\n",
+    "    )\n",
+    "\n",
+    "    page = await context.new_page()\n",
+    "\n",
+    "    return {\n",
+    "        \"playwright\": playwright,\n",
+    "        \"browser\": browser,\n",
+    "        \"context\": context,\n",
+    "        \"page\": page,\n",
+    "    }\n",
+    "\n",
+    "async def login(page, user, pw):\n",
+    "    await page.goto(url) \n",
+    "    await page.get_by_role(\"textbox\", name=\"Email Address\").fill(user)\n",
+    "    await page.get_by_role(\"textbox\", name=\"Password\").fill(pw)\n",
+    "    await page.get_by_role(\"button\", name=\"Log in\").click()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "09fef143",
+   "metadata": {},
+   "source": [
+    "## 2. Bulk Download"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c2c5c898",
+   "metadata": {},
+   "source": [
+    "Get list of files to download"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f4792acb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "download_list = []\n",
+    "\n",
+    "base_dir = Path('/home/vince/Documents/SmartFires/osm_fitness')\n",
+    "folders = [p for p in base_dir.iterdir() if p.is_dir()]\n",
+    "\n",
+    "# ----REMOVE NEXT LINE TO DO ALL STATES-----\n",
+    "folders = [f for f in folders if 'Colorado_700k' in f.name]\n",
+    "\n",
+    "for folder in folders:  \n",
+    "    geojson_files = list(folder.glob('*.geojson'))\n",
+    "    for json_path in geojson_files:\n",
+    "        download_list.append(json_path)  \n",
+    "\n",
+    "download_list = download_list"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "14fdc2f4",
+   "metadata": {},
+   "source": [
+    "Download"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "583011e8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# login \n",
+    "browser_handle = await start_browser()\n",
+    "page = browser_handle[\"page\"]\n",
+    "await login(page, user, pw)\n",
+    "\n",
+    "completed = []\n",
+    "failed = []\n",
+    "\n",
+    "for i, json_file in enumerate(download_list):\n",
+    "    try:\n",
+    "        json_path = Path(json_file)\n",
+    "        json_text = json_file.read_text() # paste the GeoJSON data\n",
+    "\n",
+    "        # for use on the last page before submitting the job\n",
+    "        city = json_path.stem.replace(' ', '_')\n",
+    "        state = json_path.parent.stem.split('_')[0].replace(' ', '_')\n",
+    "        project_name = f\"{city}_{state}\"\n",
+    "\n",
+    "        if i == 0:\n",
+    "            time.sleep(3)\n",
+    "        await page.goto('https://pinnacle.azira.com/home/feeds/datasets') # go to main page\n",
+    "\n",
+    "        await page.get_by_role(\"button\", name=\"Create New\").click()  # \"Create New\"\n",
+    "        await page.get_by_role(\"button\", name=\"Next\").click()  \n",
+    "\n",
+    "        await page.get_by_role(\"heading\", name=\"GeoJSON/KML/ESRI\").click()   # click \"GEoJSON/KML/ESRI\"\n",
+    "        await page.get_by_role(\"textbox\", name=\"Enter GeoJSON\").fill(json_text)\n",
+    "        await page.get_by_role(\"button\", name=\"Next\").click() \n",
+    "\n",
+    "        await page.locator(\"#start-date-input\").fill(start_date)\n",
+    "        await page.locator(\"#end-date-input\").fill(end_date)\n",
+    "        await page.get_by_role(\"button\", name=\"Next\").click()\n",
+    "\n",
+    "        await page.get_by_text(\"Pin Dataset\").click() \n",
+    "        await page.get_by_text(\"Common Evening and Daytime\").click()   \n",
+    "        await page.get_by_role(\"button\", name=\"Next\").first.click() \n",
+    "\n",
+    "        await page.get_by_role(\"textbox\", name=\"Name is required\").fill(project_name)\n",
+    "        await page.get_by_role(\"button\", name=\"Submit\").first.click()\n",
+    "\n",
+    "        # continue if \"file too large\"  warning appears  \n",
+    "        await page.wait_for_load_state(\"networkidle\", timeout=10_000)\n",
+    "\n",
+    "        completed.append(json_file) \n",
+    "    except Exception as e:\n",
+    "        print(f\"Error processing {json_file}: {e}\")     \n",
+    "        failed.append(json_file)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3c37af41",
+   "metadata": {},
+   "source": [
+    "# Development Code (for testing)\n",
+    "- code written in developing the above workflow"
    ]
   },
   {
@@ -327,158 +502,6 @@
    "source": [
     "await browser.close()\n",
     "await p.stop()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "59756f31",
-   "metadata": {},
-   "source": [
-    "# Combined Script"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f177e8fc",
-   "metadata": {},
-   "source": [
-    "### 1. Run First (register needed functons)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "60241b2e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "async def start_browser():\n",
-    "    playwright = await async_playwright().start()\n",
-    "\n",
-    "    browser = await playwright.chromium.launch(headless=False)\n",
-    "\n",
-    "    context = await browser.new_context(\n",
-    "        geolocation={\"latitude\": 46.8721, \"longitude\": -113.9940},\n",
-    "        permissions=[\"geolocation\"],\n",
-    "    )\n",
-    "\n",
-    "    page = await context.new_page()\n",
-    "\n",
-    "    return {\n",
-    "        \"playwright\": playwright,\n",
-    "        \"browser\": browser,\n",
-    "        \"context\": context,\n",
-    "        \"page\": page,\n",
-    "    }\n",
-    "\n",
-    "async def login(page, user, pw):\n",
-    "    await page.goto(url) \n",
-    "    await page.get_by_role(\"textbox\", name=\"Email Address\").fill(user)\n",
-    "    await page.get_by_role(\"textbox\", name=\"Password\").fill(pw)\n",
-    "    await page.get_by_role(\"button\", name=\"Log in\").click()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "3799319a",
-   "metadata": {},
-   "source": [
-    "## 2. Bulk Download"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "20f4acea",
-   "metadata": {},
-   "source": [
-    "Get list of files to download"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "2170262e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "download_list = []\n",
-    "\n",
-    "base_dir = Path('/home/vince/Documents/SmartFires/osm_fitness')\n",
-    "folders = [p for p in base_dir.iterdir() if p.is_dir()]\n",
-    "\n",
-    "# ----REMOVE NEXT LINE TO DO ALL STATES-----\n",
-    "folders = [f for f in folders if 'Colorado_700k' in f.name]\n",
-    "\n",
-    "for folder in folders:  \n",
-    "    geojson_files = list(folder.glob('*.geojson'))\n",
-    "    for json_path in geojson_files:\n",
-    "        download_list.append(json_path)  \n",
-    "\n",
-    "download_list = download_list[0:1]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "afb76a99",
-   "metadata": {},
-   "source": [
-    "Download"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9c5fa005",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# login \n",
-    "browser_handle = await start_browser()\n",
-    "page = browser_handle[\"page\"]\n",
-    "await login(page, user, pw)\n",
-    "\n",
-    "completed = []\n",
-    "failed = []\n",
-    "\n",
-    "for i, json_file in enumerate(download_list):\n",
-    "    try:\n",
-    "        json_path = Path(json_file)\n",
-    "        json_text = json_file.read_text() # paste the GeoJSON data\n",
-    "\n",
-    "        # for use on the last page before submitting the job\n",
-    "        city = json_path.stem.replace(' ', '_')\n",
-    "        state = json_path.parent.stem.split('_')[0].replace(' ', '_')\n",
-    "        project_name = f\"{city}_{state}\"\n",
-    "\n",
-    "        if i == 0:\n",
-    "            time.sleep(3)\n",
-    "        await page.goto('https://pinnacle.azira.com/home/feeds/datasets') # go to main page\n",
-    "\n",
-    "        await page.get_by_role(\"button\", name=\"Create New\").click()  # \"Create New\"\n",
-    "        await page.get_by_role(\"button\", name=\"Next\").click()  \n",
-    "\n",
-    "        await page.get_by_role(\"heading\", name=\"GeoJSON/KML/ESRI\").click()   # click \"GEoJSON/KML/ESRI\"\n",
-    "        await page.get_by_role(\"textbox\", name=\"Enter GeoJSON\").fill(json_text)\n",
-    "        await page.get_by_role(\"button\", name=\"Next\").click() \n",
-    "\n",
-    "        await page.locator(\"#start-date-input\").fill(start_date)\n",
-    "        await page.locator(\"#end-date-input\").fill(end_date)\n",
-    "        await page.get_by_role(\"button\", name=\"Next\").click()\n",
-    "\n",
-    "        await page.get_by_text(\"Pin Dataset\").click() \n",
-    "        await page.get_by_text(\"Common Evening and Daytime\").click()   \n",
-    "        await page.get_by_role(\"button\", name=\"Next\").first.click() \n",
-    "\n",
-    "        await page.get_by_role(\"textbox\", name=\"Name is required\").fill(project_name)\n",
-    "        await page.get_by_role(\"button\", name=\"Submit\").first.click()\n",
-    "\n",
-    "        # continue if \"file too large\"  warning appears  \n",
-    "        await page.wait_for_load_state(\"networkidle\", timeout=10_000)\n",
-    "\n",
-    "        completed.append(json_file) \n",
-    "    except Exception as e:\n",
-    "        print(f\"Error processing {json_file}: {e}\")     \n",
-    "        failed.append(json_file)\n"
    ]
   }
  ],
