add missing CO downloads (godlen, alamosea, air force academy)

--- a/azira_submit_jobs.ipynb
+++ b/azira_submit_jobs.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 42,
    "id": "c09aa0d7",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 46,
    "id": "677ab463",
    "metadata": {},
    "outputs": [],
@@ -75,7 +75,26 @@
     "    await page.goto(url) \n",
     "    await page.get_by_role(\"textbox\", name=\"Email Address\").fill(user)\n",
     "    await page.get_by_role(\"textbox\", name=\"Password\").fill(pw)\n",
-    "    await page.get_by_role(\"button\", name=\"Log in\").click()\n"
+    "    await page.get_by_role(\"button\", name=\"Log in\").click()\n",
+    "\n",
+    "def splitJson(json_path):\n",
+    "    json_data = json.loads(json_path.read_text())\n",
+    "    polys = json_data['features'][0]['geometry']['coordinates'].copy()\n",
+    "    num_polys = len(polys)\n",
+    "\n",
+    "    # split data in half\n",
+    "    json_data_copy = json_data.copy()\n",
+    "    json_data['features'][0]['geometry']['coordinates'] = polys[:num_polys//2]\n",
+    "    json_data_copy['features'][0]['geometry']['coordinates'] = polys[num_polys//2:]\n",
+    "\n",
+    "    # write new data\n",
+    "    part_a_path = json_path.parent / f\"{json_path.stem}_a.geojson\"\n",
+    "    part_b_path = json_path.parent / f\"{json_path.stem}_b.geojson\"\n",
+    "\n",
+    "    part_a_path.write_text(json.dumps(json_data, indent=2))\n",
+    "    part_b_path.write_text(json.dumps(json_data_copy, indent=2))\n",
+    "\n",
+    "    return part_a_path, part_b_path\n"
    ]
   },
   {
@@ -96,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 69,
    "id": "f4792acb",
    "metadata": {},
    "outputs": [],
@@ -107,15 +126,38 @@
     "folders = [p for p in base_dir.iterdir() if p.is_dir()]\n",
     "\n",
     "# ----REMOVE NEXT LINE TO DO ALL STATES-----\n",
-    "folders = [f for f in folders if 'Utah' in f.name]\n",
+    "folders = [f for f in folders if 'Colorado' in f.name]\n",
     "\n",
     "for folder in folders:  \n",
     "    geojson_files = list(folder.glob('*.geojson'))\n",
     "    for json_path in geojson_files:\n",
-    "        if ('Orem' in json_path.name) or ('Washington' in json_path.name) or ('Salt Lake City_1' in json_path.name):\n",
+    "        if 'Golden' in json_path.name or 'Alamosa' in json_path.name or 'Air Force Academy' in json_path.name:\n",
     "            download_list.append(json_path)  \n",
     "\n",
     "download_list = download_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "f079885a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[PosixPath('/home/vince/Documents/SmartFires/osm_fitness/Colorado_700k(45)/Golden.geojson'),\n",
+       " PosixPath('/home/vince/Documents/SmartFires/osm_fitness/Colorado_700k(45)/Alamosa.geojson'),\n",
+       " PosixPath('/home/vince/Documents/SmartFires/osm_fitness/Colorado_700k(45)/Air Force Academy.geojson')]"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "download_list"
    ]
   },
   {
@@ -128,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "id": "583011e8",
    "metadata": {},
    "outputs": [
@@ -136,9 +178,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Error processing /home/vince/Documents/SmartFires/osm_fitness/Utah_700k(24)/Orem.geojson: File too large\n",
-      "Error processing /home/vince/Documents/SmartFires/osm_fitness/Utah_700k(24)/Washington.geojson: File too large\n",
-      "Error processing /home/vince/Documents/SmartFires/osm_fitness/Utah_700k(24)/Salt Lake City_1.geojson: File too large\n"
+      "/home/vince/Documents/SmartFires/osm_fitness/Colorado_700k(45)/Air Force Academy.geojson: File too large\n",
+      "Completed /home/vince/Documents/SmartFires/osm_fitness/Colorado_700k(45)/Air Force Academy_b.geojson\n",
+      "Completed /home/vince/Documents/SmartFires/osm_fitness/Colorado_700k(45)/Air Force Academy_a.geojson\n",
+      "/home/vince/Documents/SmartFires/osm_fitness/Colorado_700k(45)/Alamosa.geojson: File too large\n",
+      "Completed /home/vince/Documents/SmartFires/osm_fitness/Colorado_700k(45)/Alamosa_b.geojson\n",
+      "Completed /home/vince/Documents/SmartFires/osm_fitness/Colorado_700k(45)/Alamosa_a.geojson\n",
+      "/home/vince/Documents/SmartFires/osm_fitness/Colorado_700k(45)/Golden.geojson: File too large\n",
+      "Completed /home/vince/Documents/SmartFires/osm_fitness/Colorado_700k(45)/Golden_b.geojson\n",
+      "Completed /home/vince/Documents/SmartFires/osm_fitness/Colorado_700k(45)/Golden_a.geojson\n"
      ]
     }
    ],
@@ -151,10 +199,11 @@
     "completed = []\n",
     "failed = []\n",
     "\n",
-    "download_stack = list(enumerate(download_list))\n",
+    "download_stack = list(download_list)\n",
+    "first = True\n",
     "\n",
     "while download_stack:\n",
-    "    i, json_file = download_stack.pop()\n",
+    "    json_file = download_stack.pop()\n",
     "    try:\n",
     "        json_path = Path(json_file)\n",
     "        json_text = json_file.read_text() # paste the GeoJSON data\n",
@@ -164,15 +213,28 @@
     "        state = json_path.parent.stem.split('_')[0].replace(' ', '_')\n",
     "        project_name = f\"{city}_{state}\"\n",
     "\n",
-    "        if i == 0:\n",
+    "        if first:\n",
     "            time.sleep(3)\n",
+    "            first = False   \n",
+    "\n",
     "        await page.goto('https://pinnacle.azira.com/home/feeds/datasets') # go to main page\n",
     "\n",
     "        await page.get_by_role(\"button\", name=\"Create New\").click()  # \"Create New\"\n",
     "        await page.get_by_role(\"button\", name=\"Next\").click()  \n",
     "\n",
     "        await page.get_by_role(\"heading\", name=\"GeoJSON/KML/ESRI\").click()   # click \"GEoJSON/KML/ESRI\"\n",
-    "        await page.get_by_role(\"textbox\", name=\"Enter GeoJSON\").fill(json_text)\n",
+    "\n",
+    "        await page.evaluate(\"() => document.querySelector('#GEOJSON')?.focus()\")\n",
+    "        await page.evaluate(\n",
+    "                    \"\"\"(text) => {\n",
+    "                        const el = document.querySelector('#GEOJSON');\n",
+    "                        el.value = text;\n",
+    "                        el.dispatchEvent(new Event('input', { bubbles: true }));\n",
+    "                        el.dispatchEvent(new Event('change', { bubbles: true }));\n",
+    "                    }\"\"\",\n",
+    "                    json_text\n",
+    "                )\n",
+    "        #await page.get_by_role(\"textbox\", name=\"Enter GeoJSON\").fill(json_text)\n",
     "        await page.get_by_role(\"button\", name=\"Next\").click() \n",
     "\n",
     "        await page.locator(\"#start-date-input\").fill(start_date)\n",
@@ -189,8 +251,12 @@
     "        # continue if \"file too large\"  warning appears  \n",
     "        try:\n",
     "            await expect(page.get_by_text(\"Expanded access\")).to_be_visible(timeout=1000)\n",
-    "            print(f\"Error processing {json_file}: File too large\")     \n",
-    "            failed.append(json_file) \n",
+    "            print(f\"{json_file}: File too large\")     \n",
+    "            \n",
+    "            # split file and add to stack\n",
+    "            for new_file in splitJson(json_path):\n",
+    "                download_stack.append(new_file)      \n",
+    "\n",
     "            continue\n",
     "        except Exception as e:\n",
     "            pass\n",
@@ -202,6 +268,14 @@
     "        print(f\"Error processing {json_file}: {e}\")     \n",
     "        failed.append(json_file) \n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9cdd6f0a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -542,31 +616,6 @@
    "metadata": {},
    "source": [
     "## Split a geojson into two"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "id": "e1327e52",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def splitJson(json_path):\n",
-    "    json_data = json.loads(json_path.read_text())\n",
-    "    polys = json_data['features'][0]['geometry']['coordinates'].copy()\n",
-    "    num_polys = len(polys)\n",
-    "\n",
-    "    # split data in half\n",
-    "    json_data_copy = json_data.copy()\n",
-    "    json_data['features'][0]['geometry']['coordinates'] = polys[:num_polys//2]\n",
-    "    json_data_copy['features'][0]['geometry']['coordinates'] = polys[num_polys//2:]\n",
-    "\n",
-    "    # write new data\n",
-    "    part_a_path = json_path.parent / f\"{json_path.stem}_a.geojson\"\n",
-    "    part_b_path = json_path.parent / f\"{json_path.stem}_b.geojson\"\n",
-    "\n",
-    "    part_a_path.write_text(json.dumps(json_data, indent=2))\n",
-    "    part_b_path.write_text(json.dumps(json_data_copy, indent=2))"
    ]
   },
   {
