update submit_jobs and download_files

--- a/azira_submit_jobs.ipynb
+++ b/azira_submit_jobs.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 72,
    "id": "c09aa0d7",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 73,
    "id": "677ab463",
    "metadata": {},
    "outputs": [],
@@ -102,7 +102,7 @@
    "id": "09fef143",
    "metadata": {},
    "source": [
-    "## 2. Bulk Download"
+    "## 2. Bulk Submit"
    ]
   },
   {
@@ -110,12 +110,12 @@
    "id": "c2c5c898",
    "metadata": {},
    "source": [
-    "Get list of files to download"
+    "Get list of files to submit"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 78,
    "id": "f4792acb",
    "metadata": {},
    "outputs": [],
@@ -126,38 +126,14 @@
     "folders = [p for p in base_dir.iterdir() if p.is_dir()]\n",
     "\n",
     "# ----REMOVE NEXT LINE TO DO ALL STATES-----\n",
-    "folders = [f for f in folders if 'Colorado' in f.name]\n",
+    "folders = [f for f in folders if 'Oklahoma' in f.name]\n",
     "\n",
     "for folder in folders:  \n",
     "    geojson_files = list(folder.glob('*.geojson'))\n",
     "    for json_path in geojson_files:\n",
-    "        if 'Golden' in json_path.name or 'Alamosa' in json_path.name or 'Air Force Academy' in json_path.name:\n",
-    "            download_list.append(json_path)  \n",
+    "        download_list.append(json_path)  \n",
     "\n",
     "download_list = download_list"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 70,
-   "id": "f079885a",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[PosixPath('/home/vince/Documents/SmartFires/osm_fitness/Colorado_700k(45)/Golden.geojson'),\n",
-       " PosixPath('/home/vince/Documents/SmartFires/osm_fitness/Colorado_700k(45)/Alamosa.geojson'),\n",
-       " PosixPath('/home/vince/Documents/SmartFires/osm_fitness/Colorado_700k(45)/Air Force Academy.geojson')]"
-      ]
-     },
-     "execution_count": 70,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "download_list"
    ]
   },
   {
@@ -165,12 +141,12 @@
    "id": "14fdc2f4",
    "metadata": {},
    "source": [
-    "Download"
+    "Submit"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 79,
    "id": "583011e8",
    "metadata": {},
    "outputs": [
@@ -178,15 +154,42 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/vince/Documents/SmartFires/osm_fitness/Colorado_700k(45)/Air Force Academy.geojson: File too large\n",
-      "Completed /home/vince/Documents/SmartFires/osm_fitness/Colorado_700k(45)/Air Force Academy_b.geojson\n",
-      "Completed /home/vince/Documents/SmartFires/osm_fitness/Colorado_700k(45)/Air Force Academy_a.geojson\n",
-      "/home/vince/Documents/SmartFires/osm_fitness/Colorado_700k(45)/Alamosa.geojson: File too large\n",
-      "Completed /home/vince/Documents/SmartFires/osm_fitness/Colorado_700k(45)/Alamosa_b.geojson\n",
-      "Completed /home/vince/Documents/SmartFires/osm_fitness/Colorado_700k(45)/Alamosa_a.geojson\n",
-      "/home/vince/Documents/SmartFires/osm_fitness/Colorado_700k(45)/Golden.geojson: File too large\n",
-      "Completed /home/vince/Documents/SmartFires/osm_fitness/Colorado_700k(45)/Golden_b.geojson\n",
-      "Completed /home/vince/Documents/SmartFires/osm_fitness/Colorado_700k(45)/Golden_a.geojson\n"
+      "Completed /home/vince/Documents/SmartFires/osm_fitness/Oklahoma_700k(20)/Alva.geojson\n",
+      "Completed /home/vince/Documents/SmartFires/osm_fitness/Oklahoma_700k(20)/Oklahoma City_2.geojson\n",
+      "/home/vince/Documents/SmartFires/osm_fitness/Oklahoma_700k(20)/Shawnee.geojson: File too large\n",
+      "Completed /home/vince/Documents/SmartFires/osm_fitness/Oklahoma_700k(20)/Shawnee_b.geojson\n",
+      "Completed /home/vince/Documents/SmartFires/osm_fitness/Oklahoma_700k(20)/Shawnee_a.geojson\n",
+      "/home/vince/Documents/SmartFires/osm_fitness/Oklahoma_700k(20)/Yukon.geojson: File too large\n",
+      "Completed /home/vince/Documents/SmartFires/osm_fitness/Oklahoma_700k(20)/Yukon_b.geojson\n",
+      "Completed /home/vince/Documents/SmartFires/osm_fitness/Oklahoma_700k(20)/Yukon_a.geojson\n",
+      "/home/vince/Documents/SmartFires/osm_fitness/Oklahoma_700k(20)/Midwest City.geojson: File too large\n",
+      "Completed /home/vince/Documents/SmartFires/osm_fitness/Oklahoma_700k(20)/Midwest City_b.geojson\n",
+      "Completed /home/vince/Documents/SmartFires/osm_fitness/Oklahoma_700k(20)/Midwest City_a.geojson\n",
+      "Completed /home/vince/Documents/SmartFires/osm_fitness/Oklahoma_700k(20)/Oklahoma City_1.geojson\n",
+      "Completed /home/vince/Documents/SmartFires/osm_fitness/Oklahoma_700k(20)/Durant.geojson\n",
+      "/home/vince/Documents/SmartFires/osm_fitness/Oklahoma_700k(20)/Norman.geojson: File too large\n",
+      "Completed /home/vince/Documents/SmartFires/osm_fitness/Oklahoma_700k(20)/Norman_b.geojson\n",
+      "Completed /home/vince/Documents/SmartFires/osm_fitness/Oklahoma_700k(20)/Norman_a.geojson\n",
+      "Completed /home/vince/Documents/SmartFires/osm_fitness/Oklahoma_700k(20)/Broken Arrow.geojson\n",
+      "/home/vince/Documents/SmartFires/osm_fitness/Oklahoma_700k(20)/Altus.geojson: File too large\n",
+      "Completed /home/vince/Documents/SmartFires/osm_fitness/Oklahoma_700k(20)/Altus_b.geojson\n",
+      "Completed /home/vince/Documents/SmartFires/osm_fitness/Oklahoma_700k(20)/Altus_a.geojson\n",
+      "Completed /home/vince/Documents/SmartFires/osm_fitness/Oklahoma_700k(20)/Tulsa_1.geojson\n",
+      "Completed /home/vince/Documents/SmartFires/osm_fitness/Oklahoma_700k(20)/Oklahoma City_3.geojson\n",
+      "/home/vince/Documents/SmartFires/osm_fitness/Oklahoma_700k(20)/Duncan.geojson: File too large\n",
+      "Completed /home/vince/Documents/SmartFires/osm_fitness/Oklahoma_700k(20)/Duncan_b.geojson\n",
+      "Completed /home/vince/Documents/SmartFires/osm_fitness/Oklahoma_700k(20)/Duncan_a.geojson\n",
+      "/home/vince/Documents/SmartFires/osm_fitness/Oklahoma_700k(20)/Ponca City.geojson: File too large\n",
+      "Completed /home/vince/Documents/SmartFires/osm_fitness/Oklahoma_700k(20)/Ponca City_b.geojson\n",
+      "Completed /home/vince/Documents/SmartFires/osm_fitness/Oklahoma_700k(20)/Ponca City_a.geojson\n",
+      "Completed /home/vince/Documents/SmartFires/osm_fitness/Oklahoma_700k(20)/Sapulpa.geojson\n",
+      "Completed /home/vince/Documents/SmartFires/osm_fitness/Oklahoma_700k(20)/Tulsa_2.geojson\n",
+      "Completed /home/vince/Documents/SmartFires/osm_fitness/Oklahoma_700k(20)/Stillwater.geojson\n",
+      "Completed /home/vince/Documents/SmartFires/osm_fitness/Oklahoma_700k(20)/Owasso.geojson\n",
+      "/home/vince/Documents/SmartFires/osm_fitness/Oklahoma_700k(20)/Lawton_1.geojson: File too large\n",
+      "Completed /home/vince/Documents/SmartFires/osm_fitness/Oklahoma_700k(20)/Lawton_1_b.geojson\n",
+      "Completed /home/vince/Documents/SmartFires/osm_fitness/Oklahoma_700k(20)/Lawton_1_a.geojson\n",
+      "Completed /home/vince/Documents/SmartFires/osm_fitness/Oklahoma_700k(20)/Tulsa_3.geojson\n"
      ]
     }
    ],
@@ -199,11 +202,11 @@
     "completed = []\n",
     "failed = []\n",
     "\n",
-    "download_stack = list(download_list)\n",
+    "submit_stack = list(download_list)\n",
     "first = True\n",
     "\n",
-    "while download_stack:\n",
-    "    json_file = download_stack.pop()\n",
+    "while submit_stack:\n",
+    "    json_file = submit_stack.pop()\n",
     "    try:\n",
     "        json_path = Path(json_file)\n",
     "        json_text = json_file.read_text() # paste the GeoJSON data\n",
@@ -255,7 +258,7 @@
     "            \n",
     "            # split file and add to stack\n",
     "            for new_file in splitJson(json_path):\n",
-    "                download_stack.append(new_file)      \n",
+    "                submit_stack.append(new_file)      \n",
     "\n",
     "            continue\n",
     "        except Exception as e:\n",
@@ -268,14 +271,6 @@
     "        print(f\"Error processing {json_file}: {e}\")     \n",
     "        failed.append(json_file) \n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9cdd6f0a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
