--- a/Azira/azira_download_files_playwright.ipynb
+++ b/Azira/azira_download_files_playwright.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "b1543f53",
    "metadata": {},
    "outputs": [],
@@ -64,6 +64,11 @@
     "    await page.get_by_role(\"textbox\", name=\"Email Address\").fill(user)\n",
     "    await page.get_by_role(\"textbox\", name=\"Password\").fill(pw)\n",
     "    await page.get_by_role(\"button\", name=\"Log in\").click()\n",
+    "\n",
+    "    # wait for page load\n",
+    "    await page.wait_for_url(\"**/home/feeds/datasets**\")\n",
+    "    load_more = page.get_by_role(\"button\", name=\"Load More\")\n",
+    "    await load_more.wait_for(state=\"visible\")\n",
     "\n",
     "# get links on a page\n",
     "\n",
@@ -256,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "ac1f6c24",
    "metadata": {},
    "outputs": [
@@ -2037,7 +2042,8 @@
     }
    ],
    "source": [
-    "all_links = await get_links(page, [\"California\"])\n",
+    "my_states = ['Colorado', 'Oklahoma', 'Utah', 'California', 'Nevada', \"New\", \"Arizona\", \"North\"]\n",
+    "all_links = await get_links(page, my_states)\n",
     "new_links = filter_downloaded(all_links)    \n",
     "new_links\n"
    ]
