--- a/Azira/download_file_urls.ipynb
+++ b/Azira/download_file_urls.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 27,
    "id": "9855ba15",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,8 @@
     "import os\n",
     "from urllib.parse import urlparse, parse_qs, unquote\n",
     "import re\n",
-    "from pydoc import cli"
+    "from pydoc import cli\n",
+    "import subprocess"
    ]
   },
   {
@@ -65,13 +66,11 @@
     "    await page.get_by_role(\"textbox\", name=\"Email Address\").fill(user)\n",
     "    await page.get_by_role(\"textbox\", name=\"Password\").fill(pw)\n",
     "    await page.get_by_role(\"button\", name=\"Log in\").click()\n",
-    "    await page.wait_for_url(\n",
-    "        \"https://pinnacle.azira.com/home/feeds/datasets\",\n",
-    "        timeout=60_000\n",
-    "    )\n",
     "\n",
-    "    # Then wait for something that proves the page is usable\n",
-    "    await page.wait_for_selector(\"text=Datasets\")\n",
+    "    # wait for page load\n",
+    "    await page.wait_for_url(\"**/home/feeds/datasets**\")\n",
+    "    load_more = page.get_by_role(\"button\", name=\"Load More\")\n",
+    "    await load_more.wait_for(state=\"visible\")\n",
     "\n",
     "# get links on a page\n",
     "async def get_links(page, restrict_state=None):\n",
@@ -154,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "ae63ec7a",
    "metadata": {},
    "outputs": [
@@ -170,8 +169,8 @@
     "# login \n",
     "browser_handle = await start_browser(headless=False)\n",
     "page = browser_handle[\"page\"]\n",
-    "\n",
     "await login(page, user, pw)\n",
+    "\n",
     "await click_load_more_button(page)\n",
     "\n",
     "my_states = ['Colorado', 'Oklahoma', 'Utah', 'California', 'Nevada', \"New\", \"Arizona\", \"North\"]\n",
@@ -180,24 +179,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 25,
    "id": "5676b7b9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# click \"Load More\" until the button is no longer visible\n",
+    "with open(\"urls.txt\", \"w\") as f:\n",
+    "    for item in all_links:\n",
+    "        url = item[3]\n",
+    "        f.write(f\"{url}\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "e54e4370",
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "SSH_AGENT_PID not set, cannot kill agent\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "<JSHandle preview=JSHandle@node>"
+       "CompletedProcess(args=['scp', '-i', '/home/vince/.ssh/um_vpn', 'urls.txt', 'vc149353@um:/mnt/beegfs/hellgate/home/vc149353/osm_fitness/Azira/urls.txt'], returncode=0)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# click \"Load More\" until the button is no longer visible\n",
-    "await page.wait_for_selector(\"text=Datasets\")"
+    "\n",
+    "\n",
+    "local_file = \"urls.txt\"\n",
+    "remote =  \"vc149353@um:/mnt/beegfs/hellgate/home/vc149353/osm_fitness/Azira/urls.txt\"\n",
+    "\n",
+    "subprocess.run(\n",
+    "    [\n",
+    "        \"scp\",\n",
+    "        \"-i\", \"/home/vince/.ssh/um_vpn\",\n",
+    "        f\"{local_file}\",\n",
+    "        f\"{remote}\",\n",
+    "    ],\n",
+    "    check=True\n",
+    ")"
    ]
   }
  ],
